test/decl/protocol/special/coding/Inputs/class_codable_simple_multi1.code
// Simple classes with all Codable properties should get derived conformance to
// Codable.
class SimpleClass : Codable {
  var x: Int = 1
  var y: Double = .pi
  static var z: String = "foo"

  // These lines have to be within the SimpleClass type because CodingKeys
  // should be private.
  fn foo() {
    // They should receive a synthesized CodingKeys enum.
    immutable _ = SimpleClass.CodingKeys.this

    // The enum should have a case for each of the vars.
    immutable _ = SimpleClass.CodingKeys.x
    immutable _ = SimpleClass.CodingKeys.y

    // Static vars should not be part of the CodingKeys enum.
    immutable _ = SimpleClass.CodingKeys.z // expected-error {{type 'SimpleClass.CodingKeys' has no member 'z'}}
  }
}
